# novice

./: .gitignore  README.md  package-lock.json
.github/workflows/: docker-image.yml  running_test_api.yml  running_test_geo.yml  running_test_scrape.yml  running_tests.yml
RRI/: .gitignore  local.properties
RRI/assets/: in.txt
RRI/core/: build.gradle
blockchain/: .clang-format  .gitignore  CMakeLists.txt  Peer.cpp  Peer.hpp  block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  format.sh  hash.cpp  hash.hpp  main.cpp  options.hpp  service.cpp  service.hpp
blockchain/testing_certificates/: cert.pem  key.pem
desktop-app/: build.gradle.kts  file.txt  local.properties  pom.xml  settings.gradle.kts
geo-lang/BNF/: angle.bnf  array.bnf  assignment.bnf  char.bnf  city.bnf  city_element.bnf  combine.py  combined_bnf.bnf  command.bnf  expression.bnf  float.bnf  for.bnf  function.bnf  group.bnf  identifier.bnf  if.bnf  int.bnf  language.bnf  loop.bnf  main.bnf  point.bnf  println.bnf  range.bnf  scope.bnf  statements.bnf  string.bnf  type.bnf  var_declaration.bnf  variables.bnf  ž
geo-lang/interpreter/: .gitignore  settings.gradle.kts
geo-lang/interpreter/app/: build.gradle.kts  in.txt  out.geojson  out.json  test.txt
geo-lang/syntaxanalyzer/: build.gradle.kts  settings.gradle.kts
mqtt-server/: __init__.py
mqtt-server-novinar/: __init__.py  requirements.txt  start.sh
mqtt-server-novinar/env/: pyvenv.cfg
mqtt-server/env/: pyvenv.cfg
newspaper_to_digital/: __init__.py  not_pretrained__init__.py  requirements.txt  results.txt
newspaper_to_digital/data/: data.json
novice_app/: .gitignore  local.properties
novice_app/app/: build.gradle.kts
novice_app/gradle/wrapper/: gradle-wrapper.properties
novinar_app/: README.md  build.gradle.kts  settings.gradle.kts
novinar_app/app/: build.gradle.kts
novinar_app/assets/: Pixel Ancient Egypt.rar  Pixel Art Ancient Egypt Full Version Asset Pack.rar
novinar_app/gradle/: libs.versions.toml
novinar_blockchain/: block.py  blockchain.py  client.py  parallel_blockchain.py  parallel_miner.py  server.py
novinar_game/: .gitignore  README.md  build.gradle  gradle.properties
novinar_game/assets/: blowBack.p  game.atlas  tire.p
novinar_game/core/: build.gradle
novinar_game/lwjgl3/: build.gradle
novinar_game/tiled/: Map.tmx  MyMap.tmx  geoapify_tileset.tsx
server/: .dockerignore  .gitignore  Dockerfile  index.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
server/.husky/: pre-commit
server/config/: scraper.ts  websites.ts  what_to_parse.txt
server/controller/: news.ts
server/db/: db.ts  settlements.ts
server/model/: News.ts  User.ts
server/routes/: news.ts
server/scraper/: STATUS.txt  categories.ts  websites.ts
server/security/: jwt.ts
server/socket/: socket.ts
server/tests/: Dockerfile  api.test.ts  api.ts  geo.test.ts  scrape.test.ts  setup.ts  socket.test.ts  testiranje.test.ts
server/webhook/: webhook_handler.py
siamese_find_by_photo/: .gitignore  inference_siamese.py  prep.py  test.py  train_siamese.py
siamese_find_by_photo/checkpoints/: siamese_network.pth
siamese_find_by_photo/data/: README.md
siamese_find_by_photo/test_results/: results.json
sistem-za-razpoznavo-sport (open for cringe +20 status effect)/: .gitignore  main.py  main1.py  model.py  podatki.py  test.py
web-app/: .env  package-lock.json  package.json  tsconfig.json
web-app/src/: App.tsx  osnova.test.tsx  typings.d.ts
(+206 files in other folders)
